@@ -1,3 +1,4 @@
+* Replace view shortcut by menu favorite
 * Store default language in database
 * Add icon attribute on fields
 * Prevent Wizard State name to start with '_'
